# SOC-61-univision-24b4229

./: .gitignore  End_Term_Report.md  Mid_Term_Report.md  README.md  Work_Completed_Summary.txt  requirements.txt
vigil/: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
vigil/.github/workflows/: ci.yml
vigil/agent/: __init__.py  adjudicator.py  freellmapi_client.py  provider.py  safety.py
vigil/config/: __init__.py  pipeline.yaml  settings.py
vigil/core/: __init__.py
vigil/core/blocks/: __init__.py  block.py  registry.py
vigil/core/graph/: __init__.py  executor.py  graph.py
vigil/engines/: __init__.py  blocks.py  types.py  yolo_detector.py
vigil/frontend/: app.js  index.html  styles.css
vigil/results/: events.json  metrics.json
vigil/server/: __init__.py  app.py  routes.py  schemas.py
vigil/tests/: test_agent.py  test_engines.py
vigil/tools/: evaluate.py  run_feed.py
week1/: Week_1_Report.md  state_machine.py
week2/: Week_2_Report.md  filter_detections.py
week3/: RealTimeAIDashboard.jsx  Week_3_Report.md
week4/: Week_4_Report.md  api.py
week5/: Week_5_Report.md  topological_sort.py
week6/: Week_6_Report.md  preprocess.py
week7/: Week_7_Report.md  edge_detection.py
week8/: Week_8_Report.md  nms.py
